openshift/standard-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoguppu-standard
  labels:
    app: thoguppu
spec:
  replicas: 1
  # THIS IS THE MAGIC FIX:
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: thoguppu
  template:
    metadata:
      labels:
        app: thoguppu
    spec:
      containers:
        - name: thoguppu-app
          image: image-registry.openshift-image-registry.svc:5000/anandsanchez-dev/thoguppu:latest
          ports:
            - containerPort: 8080
              name: http
          volumeMounts:
            - name: cms-volume
              mountPath: /opt/app-root/src/cms_data
      volumes:
        - name: cms-volume
          persistentVolumeClaim:
            claimName: thoguppu-pvc
