openshift/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: thoguppu
  labels:
    app: thoguppu
spec:
  ports:
    - port: 8080
      targetPort: 8080
      name: http
  selector:
    app: thoguppu
