openshift/clean-start.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: thoguppu
  labels:
    app: thoguppu
  annotations:
    # Automates finding your local image inside the OpenShift registry
    image.openshift.io/triggers: '[{"from":{"kind":"ImageStreamTag","name":"thoguppu:latest"},"fieldPath":"spec.template.spec.containers[0].image"}]'
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: thoguppu
  template:
    metadata:
      labels:
        app: thoguppu
    spec:
      containers:
        - name: backend
          image: thoguppu:latest
          ports:
            - containerPort: 8080
          volumeMounts:
            - name: cms-volume
              mountPath: /opt/app-root/src/cms_data
      volumes:
        - name: cms-volume
          persistentVolumeClaim:
            claimName: thoguppu-data-new
---
apiVersion: v1
kind: Service
metadata:
  name: thoguppu-service
spec:
  ports:
    - port: 8080
      targetPort: 8080
  selector:
    app: thoguppu
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: thoguppu-route
spec:
  to:
    kind: Service
    name: thoguppu-service
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
